--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -138,6 +138,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="KeyCode.h" />
     <ClInclude Include="Mathf.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="Game.h" />
