new (broken) input system

--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Profiler.cpp" />
   </ItemGroup>
@@ -141,7 +142,6 @@
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="KeyCode.h" />
-    <ClInclude Include="Mathf.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Profiler.h" />
