--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="RootSignature.cpp" />
@@ -236,6 +237,7 @@
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="RootSignature.h" />
