--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="MeshRenderer.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -247,8 +248,10 @@
     <ClInclude Include="d3dx12.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="Mesh.hpp" />
+    <ClInclude Include="MeshRenderer.hpp" />
     <ClInclude Include="Object.hpp" />
     <ClInclude Include="Profiler.hpp" />
+    <ClInclude Include="tiny_obj_loader.hpp" />
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="RootSignature.hpp" />
     <ClInclude Include="Shader.hpp" />
