--- a/AssetImporter/AssetImporter.vcxproj.filters
+++ b/AssetImporter/AssetImporter.vcxproj.filters
@@ -9,45 +9,87 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
+    <Filter Include="Source Files\Assets">
+      <UniqueIdentifier>{7805b639-8eb7-4836-b784-107e4ee3a1fc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Assets">
+      <UniqueIdentifier>{c24a447c-72f5-4add-b16a-a1506263d3ff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Importers">
+      <UniqueIdentifier>{31eb3871-12c3-4003-a902-80f04b3f450f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Importers">
+      <UniqueIdentifier>{a39da319-fdfc-4b0b-9d36-98e3db9217cc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MeshAsset.cpp">
+    <ClCompile Include="..\Common\AssetFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TextureAsset.cpp">
+    <ClCompile Include="..\Common\IOUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AssetImporter.cpp">
+    <ClCompile Include="..\Common\MemoryStream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Asset.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Common\Asset.cpp">
+      <Filter>Source Files\Assets</Filter>
     </ClCompile>
-    <ClCompile Include="ShaderAsset.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Common\ShaderAsset.cpp">
+      <Filter>Source Files\Assets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\TextureAsset.cpp">
+      <Filter>Source Files\Assets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\MeshAsset.cpp">
+      <Filter>Source Files\Assets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\MeshImporter.cpp">
+      <Filter>Source Files\Importers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\TextureImporter.cpp">
+      <Filter>Source Files\Importers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\AssetImporter.cpp">
+      <Filter>Source Files\Importers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MeshAsset.hpp">
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Common\IOUtil.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TextureAsset.hpp">
+    <ClInclude Include="..\Common\MemoryStream.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AssetImporter.hpp">
+    <ClInclude Include="..\Common\AssetFile.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ShaderAsset.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\Common\Asset.hpp">
+      <Filter>Header Files\Assets</Filter>
     </ClInclude>
-    <ClInclude Include="Asset.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\Common\MeshAsset.hpp">
+      <Filter>Header Files\Assets</Filter>
     </ClInclude>
-    <ClInclude Include="Util.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\Common\ShaderAsset.hpp">
+      <Filter>Header Files\Assets</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\TextureAsset.hpp">
+      <Filter>Header Files\Assets</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\TextureImporter.hpp">
+      <Filter>Header Files\Importers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\MeshImporter.hpp">
+      <Filter>Header Files\Importers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\AssetImporter.hpp">
+      <Filter>Header Files\Importers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
